<resources>
    <string name="Cancel">Cancel</string>
    <string name="IBGAskQuestionHint">Ask us anything.</string>
    <string name="IBGPromptOptionsReportBug">Report a bug</string>
    <string name="IBGReportBugHint">Please be as detailed as possible. What did you expect and what happened instead?</string>
    <string name="IBGReproStepsDisclaimerBody">To help us fix the problem, your report will include a list of steps to reproduce the issue.</string>
    <string name="IBGReproStepsDisclaimerLink">Edit list</string>
    <string name="IBGReproStepsListEmptyStateLabel">All app screens have been deleted.</string>
    <string name="IBGReproStepsListHeader">The list of app screens you visited will only be used to help us reproduce the problem you’re reporting.</string>
    <string name="IBGReproStepsListItemName">Screen #</string>
    <string name="IBGReproStepsListTitle">Visited Screens</string>
    <string name="IBGSuggestImprovementHint">How can we improve your experience using this app?</string>
    <string name="LabeKilogramsSpinner">Kilograms</string>
    <string name="LabelCmSpinner">Centimeters</string>
    <string name="LabelFtSpinner">Feet</string>
    <string name="LabelInSpinner">Inches</string>
    <string name="LabelMSpinner">Meters</string>
    <string name="LabelPoundsSpinner">Pounds</string>
    <string name="OK">OK</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="add_feature">Add your thoughts</string>
    <string name="add_home">Set as home</string>
    <string name="add_work_place">Set as workplace</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_activation_off">OFF</string>
    <string name="alarm_activation_on">ON</string>
    <string name="alarm_activation_title">ALARM</string>
    <string name="alarm_create_tapcode_title">YOUR TAPCODE</string>
    <string name="alarm_help_card_auto_activiation">Auto Activation</string>
    <string name="alarm_help_card_auto_activiation_description">When the alarm is <b>ON</b>", SmartHalo will arm its alarm as soon as you leave your bike. It'll disarm automatically when you come near SmartHalo with the app opened."</string>
    <string name="alarm_help_card_description">When the alarm is <b>ACTIVE</b>, any persistent tampering with your bike will trigger a loud alarm.</string>
    <string name="alarm_help_card_manual_activiation">Manual Activation</string>
    <string name="alarm_help_card_manual_activiation_description">"Phone out of battery? You can activate and deactivate the alarm manually. Just input your tapcode on SmartHalo's touch surface."</string>
    <string name="alarm_help_card_title">ALARM</string>
    <string name="alarm_need_no_tapcode">Cancel</string>
    <string name="alarm_no_code_set_my_code">Set my tapcode</string>
    <string name="alarm_no_code_warning">"Please set a passcode for your device before turning the alarm on. Your tapcode allows you to deactivate SmartHalo's Alarm should your phone run out of batteries."</string>
    <string name="alarm_not_connected_tapcode_warning">Please connect to your SmartHalo to change your tapcode</string>
    <string name="alarm_not_connected_warning">Please connect to your SmartHalo to change the alarm state</string>
    <string name="alarm_recap_description">While you were away, your alarm went off %1$s</string>
    <string name="alarm_recap_description_many">%1$d times.</string>
    <string name="alarm_recap_description_once">once.</string>
    <string name="alarm_recap_description_twice">twice.</string>
    <string name="alarm_recap_title">RECAP</string>
    <string name="alarm_sensitivity_lenient">Lenient</string>
    <string name="alarm_sensitivity_title">SENSITIVITY</string>
    <string name="alarm_sensitivity_update_firmware">"To set the alarm's sensitivity, please update your SmartHalo's firmware to the latest version."</string>
    <string name="alarm_sensitivity_update_firmware_cancel">Cancel</string>
    <string name="alarm_sensitivity_update_firmware_ok">Update firmware</string>
    <string name="alarm_sensitivity_vigilant">Vigilant</string>
    <string name="alarm_tapcode_button">Change Tapcode</string>
    <string name="alarm_tapcode_description">Your tapcode allows you to deactivate SmartHalo’s Alarm should your phone run out of batteries. Just tap the Morse-like code on the touch surface and you’re good to go.</string>
    <string name="alarm_tapcode_error">An error occurred while setting your tapcode. Please try again.</string>
    <string name="alarm_tapcode_instruction">TAP ON SMARTHALO’S TOUCH SURFACE</string>
    <string name="alarm_tapcode_screen_title">Define Tapcode</string>
    <string name="alarm_tapcode_success">Successfully changed your tapcode</string>
    <string name="alarm_tapcode_tap_here">TAP HERE</string>
    <string name="alarm_tapcode_title">YOUR TAPCODE</string>
    <string name="alarm_tapcode_waiting">Changing your tapcode</string>
    <string name="app_name">SmartHalo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="askAQuestionHeader">Ask a question</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_calls_incoming_call">Incoming Call</string>
    <string name="assistant_calls_private_number">Private number</string>
    <string name="assistant_help_card_call_notification">Call notification</string>
    <string name="assistant_help_card_description">When Assistant is <b>ON</b>, SmartHalo will notify you of incoming SMS and Calls with its center light.</string>
    <string name="assistant_help_card_sms_notification">SMS notification</string>
    <string name="assistant_help_card_title">ASSISTANT</string>
    <string name="assistant_notifications_accept_permissions">Accept permissions</string>
    <string name="assistant_notifications_header">Get notifications directly on your SmartHalo and never miss a message again! Choose the apps you want notifications for.</string>
    <string name="assistant_notifications_no_permissions_description">You need to accept permissions for 3rd party notifications to work.</string>
    <string name="assistant_notifications_no_permissions_title">Missing permissions</string>
    <string name="assistant_notifications_title">Notifications</string>
    <string name="assistant_notifications_type_gmail">Gmail</string>
    <string name="assistant_notifications_type_hangouts">Hangouts</string>
    <string name="assistant_notifications_type_messenger">Messenger</string>
    <string name="assistant_notifications_type_phonecalls">Phone Calls</string>
    <string name="assistant_notifications_type_slack">Slack</string>
    <string name="assistant_notifications_type_sms">SMS</string>
    <string name="assistant_notifications_type_wechat">WeChat</string>
    <string name="assistant_page_notifications_button">View supported apps</string>
    <string name="assistant_page_notifications_description">Choose the kind of notifications you get on your SmartHalo</string>
    <string name="assistant_page_notifications_title">NOTIFICATIONS</string>
    <string name="assistant_status_title">ASSISTANT</string>
    <string name="assistant_touch_input_button">View and customize</string>
    <string name="assistant_touch_input_description">Trigger your favourite features by tapping on your SmartHalo.</string>
    <string name="assistant_touch_input_header">QUICK TOUCH</string>
    <string name="calls_off">OFF</string>
    <string name="calls_on">ON</string>
    <string name="fitness_gender_female">Female</string>
    <string name="fitness_gender_male">Male</string>
    <string name="fitness_gender_non_binary">Non-binary</string>
    <string name="fitness_gender_prefer_not_to_disclose">Prefer not to disclose</string>
    <string name="hintSelectSex">Sex</string>
    <string name="kilometers">Kilometers</string>
    <string name="left_drawer_design_refresh">Design Refresh</string>
    <string name="left_drawer_feedback">Send feedback</string>
    <string name="left_drawer_help">Get Help</string>
    <string name="left_drawer_install_instructions">Install instructions</string>
    <string name="left_drawer_legal">Legal</string>
    <string name="left_drawer_linked_accounts">Linked Accounts</string>
    <string name="left_drawer_logout">Logout</string>
    <string name="left_drawer_ondevice_tutorial">On device tutorial</string>
    <string name="left_drawer_profile">Profile</string>
    <string name="left_drawer_report_bug">Report a bug (no reply)</string>
    <string name="miles">Miles</string>
    <string name="navigation_mode_compass">Compass</string>
    <string name="navigation_mode_title">NAVIGATION MODE</string>
    <string name="navigation_mode_turns">Turn by Turn</string>
    <string name="navigation_sound_off">Off</string>
    <string name="navigation_sound_on">On</string>
    <string name="navigation_sound_title">NAVIGATION SOUNDS</string>
    <string name="sound_off">Off</string>
    <string name="sound_on">On</string>
    <string name="sound_title">SOUND</string>
    <string name="touch_input_assistant_title">Assistant</string>
    <string name="touch_input_clock">Clock</string>
    <string name="touch_input_cycle_through_light_mode">Cycle through light modes</string>
    <string name="touch_input_horn">Horn</string>
    <string name="touch_input_light">Turn Light on/off</string>
    <string name="touch_input_light_setting">Light mode</string>
    <string name="touch_input_light_title">Light</string>
    <string name="touch_input_navigate_to_home">Take me home</string>
    <string name="touch_input_navigate_to_work">Take me to work</string>
    <string name="touch_input_navigation_mode">Navigation mode</string>
    <string name="touch_input_navigation_title">Navigation</string>
    <string name="touch_input_no_action">No Action</string>
    <string name="touch_input_progress_to_destination">Progress to destination</string>
    <string name="touch_input_stop_navigation">Stop navigation</string>
    <string name="units_title">DISTANCE UNITS</string>
</resources>