<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/drawer_top_section" />
    <LinearLayout android:orientation="vertical" android:background="@color/drawerMiddleBackground" android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_profile" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_1db" app:itemText="@string/left_drawer_profile" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_linked_accounts" android:layout_width="fill_parent" android:layout_height="wrap_content" app:imageWidth="20.0dip" app:itemImage="@drawable/linked_account_icon" app:itemText="@string/left_drawer_linked_accounts" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_help" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_1d6" app:itemText="@string/left_drawer_help" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_feedback" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_1da" app:itemText="@string/left_drawer_feedback" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_report_bug" android:layout_width="fill_parent" android:layout_height="wrap_content" app:imageWidth="20.0dip" app:itemImage="@drawable/APKTOOL_DUMMY_a1" app:itemText="@string/left_drawer_report_bug" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_design_refresh" android:layout_width="fill_parent" android:layout_height="wrap_content" app:imageWidth="20.0dip" app:itemImage="@drawable/APKTOOL_DUMMY_a1" app:itemText="@string/left_drawer_design_refresh" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_instructions" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_1d7" app:itemText="@string/left_drawer_install_instructions" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_touch_demo" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_20d" app:itemText="@string/left_drawer_ondevice_tutorial" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_legal" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_1d9" app:itemText="@string/left_drawer_legal" />
        <layout.LeftDrawerItemLayout android:layout_gravity="center|left" android:id="@id/left_drawer_logout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:itemImage="@drawable/APKTOOL_DUMMY_1d8" app:itemText="@string/left_drawer_logout" />
    </LinearLayout>
</merge>