<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/backgroundGray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" card_view:cardBackgroundColor="@color/veryWhite" card_view:cardCornerRadius="4.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <layout.touchInputs.TouchInputsEditHeader android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:headerDescription="@string/touch_input_navigation_title" card_view:headerIcon="@drawable/APKTOOL_DUMMY_26c" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/stop_navigation" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_stop_navigation" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/navigation_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_navigation_mode" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/take_me_home" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_navigate_to_home" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/take_me_to_work" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_navigate_to_work" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/progress_to_destination" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_progress_to_destination" card_view:showDivider="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" card_view:cardBackgroundColor="@color/veryWhite" card_view:cardCornerRadius="4.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <layout.touchInputs.TouchInputsEditHeader android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:headerDescription="@string/touch_input_light_title" card_view:headerIcon="@drawable/APKTOOL_DUMMY_268" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/light_toggle" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_light" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/lights_cycle" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_cycle_through_light_mode" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/light_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_light_setting" card_view:showDivider="false" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" card_view:cardBackgroundColor="@color/veryWhite" card_view:cardCornerRadius="4.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <layout.touchInputs.TouchInputsEditHeader android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:headerDescription="@string/touch_input_assistant_title" card_view:headerIcon="@drawable/APKTOOL_DUMMY_266" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/clock" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_clock" card_view:showDivider="true" />
                <layout.touchInputs.TouchInputsEditItem android:id="@id/horn" android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:itemDescription="@string/touch_input_horn" card_view:showDivider="false" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" card_view:cardBackgroundColor="@color/veryWhite" card_view:cardCornerRadius="4.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/veryBlack" android:id="@id/no_action" android:background="@drawable/selector_list_item" android:paddingLeft="14.0dip" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/touch_input_no_action" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>