<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/layout_map_drop_menu" android:background="@color/darkGreen" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/veryWhite" android:id="@id/navigation_mode_title_id" android:text="@string/navigation_mode_title" android:layout_centerHorizontal="true" style="@style/mapDropTitleStyle" />
    <layout.SettingsSwitch android:id="@id/navigationModeSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/navigation_mode_title_id" app:contentColor="@color/navigationGreen" app:leftIcon="@drawable/APKTOOL_DUMMY_274" app:leftText="@string/navigation_mode_turns" app:rightIcon="@drawable/APKTOOL_DUMMY_c4" app:rightText="@string/navigation_mode_compass" app:thumbColor="@color/veryWhite" app:trackColor="@color/settingsTrack" />
    <TextView android:textColor="@color/veryWhite" android:id="@id/unit_title_id" android:text="@string/units_title" android:layout_below="@id/navigationModeSwitch" android:layout_centerHorizontal="true" style="@style/mapDropTitleStyle" />
    <layout.SettingsSwitch android:id="@id/distanceUnitSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/unit_title_id" app:contentColor="@color/navigationGreen" app:leftIcon="@drawable/APKTOOL_DUMMY_1c0" app:leftText="@string/kilometers" app:rightIcon="@drawable/APKTOOL_DUMMY_1dc" app:rightText="@string/miles" app:thumbColor="@color/veryWhite" app:trackColor="@color/settingsTrack" />
    <TextView android:textColor="@color/veryWhite" android:id="@id/sound_title_id" android:text="@string/navigation_sound_title" android:layout_below="@id/distanceUnitSwitch" android:layout_centerHorizontal="true" style="@style/mapDropTitleStyle" />
    <layout.SettingsSwitch android:id="@id/soundSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_medium" android:layout_below="@id/sound_title_id" app:contentColor="@color/navigationGreen" app:leftIcon="@drawable/APKTOOL_DUMMY_8c" app:leftText="@string/navigation_sound_off" app:rightIcon="@drawable/APKTOOL_DUMMY_8d" app:rightText="@string/navigation_sound_on" app:thumbColor="@color/veryWhite" app:trackColor="@color/settingsTrack" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_medium" android:layout_below="@id/soundSwitch">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/navigation_sound_low" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/APKTOOL_DUMMY_8b" android:layout_marginStart="@dimen/margin_medium" android:layout_marginEnd="@dimen/small_padding" />
        <SeekBar android:layout_gravity="center_vertical" android:id="@id/navigationVolume" android:layout_width="0.0dip" android:layout_height="wrap_content" android:thumb="@drawable/APKTOOL_DUMMY_23f" android:layout_weight="1.0" />
        <ImageView android:layout_gravity="center_vertical" android:id="@id/navigation_sound_high" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/APKTOOL_DUMMY_8a" android:layout_marginStart="@dimen/small_padding" android:layout_marginEnd="@dimen/medium_padding" />
    </LinearLayout>
</RelativeLayout>